--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@tailwindcss/forms": "^0.5.4",
     "formik": "^2.4.2",
+    "i18next": "^23.2.11",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.0.2",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
